--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ body {
   font-size: 1rem;
 }
 
+/* header */
+
 .main-header {
+  width: auto;
+  height: 4em;
   display: flex;
   flex-direction: row;
   border: 5px solid #83d0f2;
@@ -22,14 +26,23 @@ body {
   padding-right: 0;
 }
 
+.main-header>* {
+  line-height: 4em;
+}
+
 a {
   text-decoration: none;
   color: #333;
+  display: block;
+}
+
+.list-nav>a:hover {
+  background-color: #eee;
 }
 
 .logo-box {
-  width: 217px;
-  height: 100px;
+  width: 15em;
+  height: auto;
 }
 
 img {
@@ -44,20 +57,25 @@ img {
 }
 
 .list-menu {
+  width: 80%;
   list-style-type: none;
   display: flex;
   justify-content: space-between;
 }
 
 .list-nav {
-  padding: 0 15px;
+  width: 100%;
+  text-align: center;
 }
 
-.list-login {
+.list-login,
+.search {
   list-style-type: none;
+  padding: 0 1em;
 }
 
-/*end header */
+/* end header */
+
 .document-info {
   background-color: #f5f9fa;
   padding: 30px 0 30px 0;
@@ -224,3 +242,15 @@ code {
   margin-top: 30px;
 }
 
+@media only screen and (max-width: 1140px) {
+
+  .list-login,
+  .search {
+    display: none;
+  }
+
+  .list-menu {
+    width: 100%;
+  }
+
+}
