--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-left: 9%;
 }
 
 .center-buttons {
@@ -112,6 +113,11 @@ h1 {
   list-style-type: none;
   margin-left: 10px;
   /*width: 25%;*/
+}
+
+.container {
+  width: 80%;
+  margin: auto;
 }
 
 .container-aside-article {
@@ -196,7 +202,6 @@ h1 {
 
 h2 {
   font-size: 2em;
-  margin-left: 20px;
   margin-top: 20px;
 }
 
@@ -240,17 +245,4 @@ code {
   font-size: 1.2em;
   font-variant: small-caps;
   margin-top: 30px;
-}
-
-@media only screen and (max-width: 1140px) {
-
-  .list-login,
-  .search {
-    display: none;
-  }
-
-  .list-menu {
-    width: 100%;
-  }
-
 }
