--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   background-color: #fff;
   padding-left: 15px;
   padding-right: 0;
+  padding-top: 15px;
 }
 
 a {
@@ -56,6 +57,29 @@ img {
 .list-login {
   list-style-type: none;
 }
+.search{
+  background-color: #222;
+  margin-top:-15px;
+  
+}
+.search input{
+    background-color: #222;
+    color: #fff;
+    border: 0;
+
+}
+.button-search {
+  width: 100%;
+  height: 100&;
+  background-color: #222;
+  border: 0;
+  color: #fff;
+}
+i{
+  width: 40px;
+  height: 40px;
+}
+
 
 /*end header */
 .document-info {
@@ -180,6 +204,7 @@ h2 {
   font-size: 2em;
   margin-left: 20px;
   margin-top: 20px;
+  border-top: 3px solid #3d7e9a;
 }
 
 h3 {
@@ -224,3 +249,9 @@ code {
   margin-top: 30px;
 }
 
+.footer-mdn h2{
+  border-top: 0px;
+}
+.footer-mozilla h2{
+  border-top: 0px;
+}
