--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ h1 {
   padding: 60px 20px;
   background-color: #222;
   color: #fff;
+  font-size: 16px;
 }
 
 .box-footer-center {
@@ -176,14 +177,25 @@ h1 {
   color: #fff;
 }
 
+.footer-title{
+  font-size: 17.5px;
+  margin-bottom: 20px;
+}
+
 .list-footer {
   list-style-type: none;
   color: #fff;
 }
 
 .nav-footer a {
-  color: #3d7e9a;
+  color: #83d0f2;
   text-decoration: none;
+  padding: 5px;
+}
+
+.footer-social{
+  font-size: 24px;
+  display: inline-block;
 }
 
 .footer-mdn {
