--- a/templateStyle.css
+++ b/templateStyle.css
@@ -1,18 +1,9 @@
 :root {
-  --primary-color: #B75D69;
-  --secondary-color: #A04D58;
-  /*--background-color: #E6CCBE;*/
-  --black: #0F1A20;
-  --white: #EDEDED;
+  --primary-color: #83d0f2;
+  --secondary-color: #78bcda;
+  --black: #0f1a20;
+  --white: #fafafa;
 }
-
-/*
-  colores:
-  light-blue #83d0f2;
-  background #fff;
-
-*/
-
 
 * {
   margin: 0;
@@ -21,18 +12,23 @@
 }
 
 body {
-  color: var(--white);
   width: 100%;
-  display: grid;
+  color: var(--black);
+  background-color: var(--white);
   font-family: Arial, sans-serif;
-  background-color: var(--primary-color);
+  font-size: 18px;
+  display: grid;
   grid-template-areas: "header" "content" "footer";
 }
 
 /* predefinidos*/
 
 ::selection {
-  background: var(--black);
+  background: var(--secondary-color);
+}
+
+::-moz-selection {
+  background: var(--secondary-color);
 }
 
 ul {
@@ -41,15 +37,15 @@ ul {
 }
 
 a {
-  color: var(--white);
+  color: var(--black);
   text-decoration: none;
 }
 
 p {
-    text-align: justify;
-    letter-spacing: 0.02em;
-    padding: 0.5em;
-    font-size: 0.9em;
+  text-align: justify;
+  letter-spacing: 0.02em;
+  padding: 0.5em;
+  font-size: 0.9em;
 }
 
 header {
@@ -91,7 +87,7 @@ main {
   width: 100%;
   grid-area: content;
   display: grid;
-  grid-template-columns: 1fr 2fr 4fr 1fr;
+  grid-template-columns: 1fr 1fr 3fr 1fr;
   grid-gap: 1em;
   margin: 2em 0;
 }
@@ -105,7 +101,7 @@ main {
 }
 
 .sidebar > h3 {
-    margin: 0.5em 0;
+  margin: 0.5em 0;
 }
 
 .sidebar-item {
@@ -130,6 +126,7 @@ footer {
   width: 100%;
   background-color: var(--black);
   color: var(--white);
+  padding: 2em 0;
   grid-area: footer;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -140,46 +137,49 @@ footer > * {
 }
 
 @media (max-width: 750px) {
-    main {
-        width: 90%;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 1em;
-        margin: auto;
-        padding: 1em 0;
-    }
-
-    .head {
-        grid-column: 1 / -1;
-    }
-
-    .content {
-        grid-column: 1 / -1;
-    }
-
-    .sidebar {
-        order: 3;
-        grid-column: 1 / -1;
-        margin-bottom: 1em;
-    }
-
-    .sidebar > ul {
-      display: flex;
-      flex-flow: row wrap;
-    }
-    
-    .sidebar-item {
-      width: 50%;
-    }
-
+  main {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1em;
+    margin: auto;
+    padding: 1em 0;
   }
 
-  @media (max-width: 450px) {
-    .sidebar > ul {
-      display: block;
-    }
-  
-    .sidebar-item {
-      width: 100%;
-    }
+  .head {
+    grid-column: 1 / -1;
   }
+
+  .content {
+    grid-column: 1 / -1;
+  }
+
+  .sidebar {
+    order: 3;
+    grid-column: 1 / -1;
+    margin-bottom: 1em;
+  }
+
+  .sidebar > ul {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .sidebar-item {
+    width: 50%;
+  }
+}
+
+@media (max-width: 450px) {
+  .navbar {
+    display: none;
+  }
+
+  .sidebar > ul {
+    display: block;
+  }
+
+  .sidebar-item {
+    width: 100%;
+  }
+}
