--- a/templateStyle.css
+++ b/templateStyle.css
@@ -13,6 +13,7 @@
 
 body {
   width: 100%;
+  height: 100vh;
   color: var(--black);
   background-color: var(--white);
   font-family: Arial, sans-serif;
