--- a/templateStyle.css
+++ b/templateStyle.css
@@ -18,8 +18,6 @@ body {
   background-color: var(--white);
   font-family: Arial, sans-serif;
   font-size: 18px;
-  display: grid;
-  grid-template-areas: "header" "content" "footer";
 }
 
 /* predefinidos*/
@@ -50,10 +48,10 @@ p {
 }
 
 header {
+  width: 100%;
   height: 3em;
   padding: 0 0.5em;
   border-top: 5px solid var(--secondary-color);
-  grid-area: header;
   display: flex;
   justify-content: space-between;
 }
@@ -84,21 +82,27 @@ header {
   line-height: 3em;
 }
 
+.navbar-item > a:hover {
+  font-weight: bold;
+  color: white;
+  background-color: var(--secondary-color);
+}
+
 main {
   width: 100%;
   margin: 2em 0;
-  grid-area: content;
-  display: grid;
-  grid-template-columns: 1fr 1fr 3fr 1fr;
-  grid-gap: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .head {
-  grid-column: 2 / 4;
+  width: 95%;
 }
 
 .sidebar {
-  grid-column: 2;
+  width: 25%;
 }
 
 .sidebar > h3 {
@@ -120,7 +124,7 @@ main {
 }
 
 .content {
-  grid-column: 3;
+  width: 70%;
 }
 
 footer {
@@ -142,22 +146,21 @@ footer > * {
     width: 90%;
     margin: auto;
     padding: 1em 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1em;
+    display: flex;
+    flex-flow: column;
   }
 
   .head {
-    grid-column: 1 / -1;
+    width: 100%;
   }
 
   .content {
-    grid-column: 1 / -1;
+    width: 100%;
   }
 
   .sidebar {
+    width: 100%;
     margin-bottom: 1em;
-    grid-column: 1 / -1;
     order: 3;
   }
 
