--- a/templateStyle.css
+++ b/templateStyle.css
@@ -130,6 +130,7 @@ main {
 footer {
   width: 100%;
   padding: 2em 0;
+  margin-top: auto; 
   color: var(--white);
   background-color: var(--black);
   grid-area: footer;
@@ -139,6 +140,14 @@ footer {
 
 footer > * {
   padding: 1em;
+}
+
+@media only screen and (min-width: 900px) { 
+  main {
+    width: 70%;
+    margin: auto;
+    padding: 1em 0;
+  }
 }
 
 @media (max-width: 750px) {
