Centra los elementos del footer para mobile

--- a/templateStyle.css
+++ b/templateStyle.css
@@ -195,4 +195,12 @@ footer > * {
   .sidebar-item {
     width: 100%;
   }
+  
+  footer {
+	  display: flex;
+	  flex-direction: column;
+	  justify-content: flex-start;
+	  text-align: center;
+  }
+
 }
