Se modifica referencia a img

--- a/template/fakeForEachTemplate.html
+++ b/template/fakeForEachTemplate.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <a class="logo" href="#">
-        <img src="img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo"/>
+        <img src="../img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo"/>
       </a>
       <nav class="navbar">
         <ul>
@@ -112,7 +112,7 @@ console.log(element);
     <footer>
         <section>
             <a class="logo" href="#">
-                <img src="img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo"/>
+                <img src="../img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo"/>
             </a>
         </section>
         <section>
