--- a/template/template.html
+++ b/template/template.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <a class="logo" href="#">
-        <img src="img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo"/>
+        <img src="../img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo"/>
       </a>
       <nav class="navbar">
         <ul>
@@ -62,7 +62,7 @@
     <footer>
         <section>
             <a class="logo" href="#">
-                <img src="img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo"/>
+                <img src="../img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo"/>
             </a>
         </section>
         <section>
