--- a/template/templateStyle.css
+++ b/template/templateStyle.css
@@ -51,6 +51,16 @@ p {
   letter-spacing: 0.02em;
 }
 
+article > h3, h4 {
+  margin: 0 0.3em;
+}
+
+dt, dd {
+  font-size: 0.8em;
+}
+
+/* index */
+
 header {
   width: 100%;
   height: 3em;
