--- a/template/templateStyle.css
+++ b/template/templateStyle.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  width: 100%;
+  /*width: 100%;*/
   height: 100vh;
   color: var(--black);
   background-color: var(--white);
@@ -62,7 +62,7 @@ dt, dd {
 /* index */
 
 header {
-  width: 100%;
+  /*width: 100%;*/
   height: 3em;
   padding: 0 0.5em;
   border-top: 5px solid var(--secondary-color);
@@ -76,8 +76,9 @@ header {
 }
 
 .navbar {
-  width: 100%;
+  /*width: 100%;*/
   margin: auto;
+  flex: 1;
 }
 
 .navbar > ul {
@@ -103,7 +104,7 @@ header {
 }
 
 main {
-  width: 100%;
+  width: 70%;
   margin: 2em 0;
   display: flex;
   flex-direction: row;
@@ -112,30 +113,31 @@ main {
 }
 
 .head {
-  width: 100%;
+  width: 70%;
   border-bottom: 5px solid;
   border-image-source: linear-gradient(5deg, var(--secondary-color), var(--white));
   border-image-slice: 1;
-  margin-bottom: 1em;	
-  padding-bottom: 0.5em;
+  margin: auto;
+  padding: 1em 1em;
 }
 
-.sidebar {
-  width: 33%;
+/*.sidebar {
+  width: 23%;
   margin-right: 0.2em;
-}
+}*/
 
 .sidebar > h3 {
   margin: 0.5em 0;
 }
 
-.sidebar-item {
+/*.sidebar-item {
   width: 100%;
-}
+}*/
 
 .sidebar-item > a {
   display: block;
-  padding-left: 1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   line-height: 2em;
 }
 
@@ -148,7 +150,7 @@ main {
 }
 
 footer {
-  width: 100%;
+  /*width: 100%;*/
   padding: 2em 0;
   margin-top: auto; 
   color: var(--white);
@@ -163,7 +165,7 @@ footer > * {
 
 @media only screen and (min-width: 750px) { 
   main {
-    width: 70%;
+    /*width: 70%;*/
     margin: auto;
     padding: 1em 0;
   }
@@ -172,7 +174,7 @@ footer > * {
 @media (max-width: 750px) {
   main {
     width: 90%;
-    margin: auto;
+    margin: 0 auto;
     padding: 1em 0;
     display: flex;
     flex-flow: column;
@@ -180,6 +182,7 @@ footer > * {
 
   .head {
     width: 100%;
+    margin: 0;
   }
 
   .content {
@@ -187,7 +190,7 @@ footer > * {
   }
 
   .sidebar {
-    width: 100%;
+    width: 66%;
     margin-bottom: 1em;
     order: 3;
   }
@@ -216,10 +219,10 @@ footer > * {
   }
   
   footer {
-	  display: flex;
-	  flex-direction: column;
-	  justify-content: flex-start;
-	  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
   }
 
-}
+
