--- a/css/templateStyle.css
+++ b/css/templateStyle.css
@@ -160,7 +160,7 @@ footer > * {
 @media (max-width: 750px) {
   .container {
     width: 90%;
-    margin: 0 auto;
+    margin: 1em auto;
     padding: 0;
     display: flex;
     flex-flow: column;
