--- a/css/functionStyle.css
+++ b/css/functionStyle.css
@@ -48,12 +48,7 @@ code {
     display: block;
     width: 100%;
     margin: 0.5em 0;
-    background: linear-gradient(
-      to right,
-      var(--secondary-color) 0%,
-      var(--primary-color) 50%,
-      var(--white) 100%
-    );
+    background: linear-gradient(to right, var(--secondary-color) 0%, var(--primary-color) 50%, var(--white) 100%);
   }
 
   .fn-navbar > ul {
@@ -77,11 +72,7 @@ code {
 
 @media (max-width: 450px) {
   .fn-navbar {
-    background: linear-gradient(
-      5deg,
-      var(--secondary-color),
-      var(--primary-color)
-    );
+    background: linear-gradient(5deg, var(--secondary-color), var(--primary-color));
   }
 
   .fn-navbar > ul {
