Elimina borde del h1 para max-width 750

--- a/css/functionStyle.css
+++ b/css/functionStyle.css
@@ -68,6 +68,13 @@ code {
   pre {
     margin: 0;
   }
+
+  h1 {
+    width: 90%;
+    border: none;
+    margin: auto;
+    padding: 0.5em 0.5em;
+  }
 }
 
 @media (max-width: 450px) {
